Update tests and factory